@@ -16,6 +16,10 @@ RewriteEngine on
 #
 # RewriteBase /mysite
 
+# add modification timestamps to your css and js files via cachebuster.php plugin
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.+)\.(\d+)\.(js|css)$ $1.$3 [L]
+
 # block text files in the content folder from being accessed directly
 RewriteRule ^content/(.*)\.(txt|md|mdown)$ index.php [L]
 
